# pepper_demo_lib

./: CMakeLists.txt  package.xml
include/pepper_demo_lib/: Actions.h  PepperRobot.h  Task.h  Types.h
rosbridgecpp/Simple-WebSocket-Server/: client_ws.hpp
src/: Actions.cpp  PepperRobot.cpp  Task.cpp
