<?xml version="1.0"?>
<package format="2">
  <name>pepper_demo_lib</name>
  <version>0.0.0</version>
  <description>The pepper_demo_lib package</description>

  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>

  <license>BSD</license>

  <author email="gsarthou@laas.fr">gsarthou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nao_interaction_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>nao_interaction_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>nao_interaction_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
